--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,68 +1,67 @@
-[tool.poetry]
+[project]
 name = "unimernet"
 version = "0.2.3"
-description = 'UniMERNet: A Universal Network for Real-World Mathematical Expression Recognition'
-authors = ["Bin Wang <ictwangbin@gmail.com>"]
+description = "UniMERNet: A Universal Network for Real-World Mathematical Expression Recognition"
+authors = [
+    {name = "Bin Wang", email = "ictwangbin@gmail.com"}
+]
 readme = "README.md"
-license = "Apache License 2.0"
-repository = "https://github.com/opendatalab/UniMERNet"
+license = {text = "Apache License 2.0"}
+requires-python = ">=3.10"
 keywords = ["MER", "latex", "markdown", "pdf"]
-include = [
-    "train.py",
-    "test.py",
-    "demo.py",
-    "unimernet_app.py",
-    "run_unimernet_app.py",
+dependencies = [
+    "torch>=2.2.2",
+    "torchvision>=0.17.2",
+    "omegaconf>=2.3.0,<3.0.0",
+    "matplotlib>=3.8.4,<4.0.0",
+    "iopath>=0.1.9,<0.2.0",
+    "timm>=0.9.16,<0.10.0",
+    "opencv-python>=4.6.0,<5.0.0",
+    "transformers==4.42.4",
+    "fairscale>=0.4.13,<0.5.0",
+    "ftfy>=6.2.0,<7.0.0",
+    "albumentations>=1.4.4,<2.0.0",
+    "wand>=0.6.13,<0.7.0",
+    "webdataset>=0.2.86,<0.3.0",
+    "rapidfuzz>=3.8.1,<4.0.0",
+    "termcolor>=2.4.0,<3.0.0",
+    "pandas>=2.2.2,<3.0.0",
+    "evaluate>=0.4.1,<0.5.0",
+    "rich>=13.7.1,<14.0.0",
+    "jupyterlab>=4.1.6,<5.0.0",
+    "tabulate>=0.9.0,<0.10.0",
+    "nltk>=3.8.1,<4.0.0",
+    "streamlit>=1.33.0,<2.0.0",
+    "pypdfium2>=4.29.0,<5.0.0",
+    "pdf2image>=1.17.0,<2.0.0",
+    "streamlit_drawable_canvas>=0.9.3,<0.10.0",
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.10"
-torch = ">=2.2.2"
-torchvision = ">=0.17.2"
-omegaconf = "^2.3.0"
-matplotlib = "^3.8.4"
-iopath = "^0.1.9"
-timm = "^0.9.16"
-opencv-python = "^4.6.0"
-transformers = "4.42.4"
-fairscale = "^0.4.13"
-# ftfy = "^6.2.0"
-ftfy = {version = "^6.2.0", python = ">=3.10,<4.0"}
-albumentations = "^1.4.4"
-wand = "^0.6.13"
-webdataset = "^0.2.86"
-rapidfuzz = "^3.8.1"
-termcolor = "^2.4.0"
-pandas = "^2.2.2"
-evaluate = "^0.4.1"
-rich = "^13.7.1"
-jupyterlab = "^4.1.6"
-tabulate = "^0.9.0"
-nltk = "^3.8.1"
-streamlit = "^1.33.0"
-pypdfium2 = "^4.29.0"
-pdf2image = "^1.17.0"
-streamlit_drawable_canvas = "^0.9.3"
-
-[tool.poetry.extras]
+[project.optional-dependencies]
 full = [
-    "termcolor",
-    "pandas",
-    "rich",
-    "jupyterlab",
-    "tabulate",
-    "nltk",
-    "streamlit",
-    "pypdfium2",
-    "pdf2image",
-    "streamlit_drawable_canvas"
+    "termcolor>=2.4.0,<3.0.0",
+    "pandas>=2.2.2,<3.0.0",
+    "rich>=13.7.1,<14.0.0",
+    "jupyterlab>=4.1.6,<5.0.0",
+    "tabulate>=0.9.0,<0.10.0",
+    "nltk>=3.8.1,<4.0.0",
+    "streamlit>=1.33.0,<2.0.0",
+    "pypdfium2>=4.29.0,<5.0.0",
+    "pdf2image>=1.17.0,<2.0.0",
+    "streamlit_drawable_canvas>=0.9.3,<0.10.0",
 ]
 
-[tool.poetry.scripts]
+[project.scripts]
 unimernet = "demo:main"
 unimernet_gui = "run_unimernet_app:run_app"
 unimernet_eval = "test:main"
 
+[project.urls]
+Repository = "https://github.com/opendatalab/UniMERNet"
+
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["unimernet"]
